@startuml
'https://plantuml.com/class-diagram
'___________STYLES___________
title UML - Sistema gubernamental de mensajería interna
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor Black
    BackgroundColor White
    HeaderBackgroundColor Gray
    BorderColor Black
    FontColor White
    FontSize 14
    AttributeFontSize 12
}

skinparam object{
    ArrowColor Black
    BackgroundColor White
    BorderColor Black
    FontColor Black
    FontSize 14
    AttributeFontSize 12
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Black
}

'___________UML___________

package model {
enum TipoDeDocumento {
RESERVADO(1)
SECRETO(2)
MUY_SECRETO(3)
-nivelDeAcceso: int
-TipoDeDocumento(int nivel)
+getNivelDeAcceso(): int
}

class Documento {
-contenido: String
-tipo: TipoDeDocumento
+Documento(String contenido, TipoDeDocumento tipo)
+getContenido(): String
+setContenido()
+getTipo(): TipoDeDocumento
+setTipo()
+toString()
}
}

package service {
abstract FuncionarioPublico {
- siguienteFuncionarioPublico: FuncionarioPublico
- tipoDeAutorización: TipoDeDocumento
+{abstract}leerDocumento(Documento documento)
+getSiguienteFuncionarioPublico(): FuncionarioPublico
+setSiguienteFuncionarioPublico(FuncionarioPublico siguienteFuncionarioPublico)
+getTipoDeAutirización(): TipoDeDocumento
+setTipoDeAutorización(TipoDeDocumento tipoDeAutorización)
}

class Diputado {
+Diputado(Tipo autorización)
+leerDocumento(Documento documento)
}

class Ministro {
+Ministro(Tipo autorización)
+leerDocumento(Documento documento)
}

class Presidente {
+Presidente(Tipo autorización)
+leerDocumento(Documento documento)
}

class CadenaDeManejadores {
-manejadorInicial: FuncionarioPublico
+CadenaDeManejadores()
+getManejadorInicial(): FuncionarioPublico
+setManejadorInicial(FuncionarioPublico manejadorInicial)
}
}

model <.. service
Documento *- TipoDeDocumento
FuncionarioPublico <|-- Diputado
FuncionarioPublico <|-- Ministro
FuncionarioPublico <|-- Presidente
CadenaDeManejadores .> FuncionarioPublico

@enduml